extra part added

--- a/index.html
+++ b/index.html
@@ -13,12 +13,18 @@
 </head>
 
 <body>
+    <!-- this section is extra -->
+    <section id="sign-section">
+        <button class="sign-btn">Sign up</button>
+        <button class="sign-btn">Sign in</button>
+    </section>
     <section class="container">
         <div class="half-width">
             <h1><span class="orange-color">Skip</span><span class="gray-color"> The Diet,</span></h1>
             <h1 class="gray-color">Just Eat Healthy</h1>
             <h1 class="gray-color">With Food Hub</h1>
-            <p><span class="gray-color">Hello world, Wellcome to Food Hub. Now you don't need to think about your diet because we are provide world class, healthy and delicious food for you!</span></p>
+            <p><span class="gray-color">Hello world, Wellcome to Food Hub. Now you don't need to think about your diet
+                    because we are provide world class, healthy and delicious food for you!</span></p>
             <a href="http://www.google.com" target="_blank" class="anchor-btn white-color">Order Food</a>
         </div>
         <div class="half-width">
@@ -31,7 +37,8 @@
         </div>
         <div class="half-width">
             <h2 class="gray-color">About me</h2>
-            <p>I am a baby web developer. Right now I learning web development with the team 'Programming Hero' and I'm very serious about it. My aim is to become a successful programmer.</p>
+            <p>I am a baby web developer. Right now I learning web development with the team 'Programming Hero' and I'm
+                very serious about it. My aim is to become a successful programmer.</p>
             <a href="https://www.google.com" target="_blank" class="anchor-btn white-color">Contact me</a>
         </div>
     </section>
@@ -75,6 +82,15 @@
         <div class="social-media-item">
             <h2>100k</h2>
             <p>Dribble Shot Likes</p>
+        </div>
+    </section>
+
+    <!-- this section is extra -->
+    <section id="comment-section">
+        <div>
+            <h2>Comments</h2>
+            <input type="text" placeholder="add your comment here" id="input-comment">
+            <button id="comment-btn">Comment</button>
         </div>
     </section>
     <section class="text-center" id="bottom-section">
