changed description text

--- a/index.html
+++ b/index.html
@@ -45,28 +45,27 @@
     <section>
         <div class="text-center">
             <h2 class="gray-color">My Recipies</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit, natus alias, tempora ipsa id
-                provident, ullam dolorum iusto accusamus qui ad. Suscipit, error vero fuga placeat nostrum deserunt amet
-                eum?</p>
+            <p>I feel proud to say that my recipies is the best for those who are maintaining there diet. I have many
+                types of recipies and all are for diet maintaining people.</p>
         </div>
         <div class="container">
             <div class="one-third-width">
                 <img src="images/food/Project Cover.png" alt="">
                 <h2>Recipie Title</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam dignissimos reiciendis quia non
-                    odio dolore nesciunt rerum! Accusamus, omnis necessitatibus?</p>
+                <p>This is my first recipie. It's is awsome to eat but funny thing is that I don't know the name of this
+                    recipie, even how to made this!</p>
             </div>
             <div class="one-third-width">
                 <img src="images/food/Project Cover.jpg" alt="">
                 <h2>Recipie Title</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet quaerat atque sunt error dolores
-                    nam ea soluta sed earum sequi!</p>
+                <p>This is my second recipie. It's is awsome to eat but funny thing is that I don't know the name of
+                    this recipie, even how to made this!</p>
             </div>
             <div class="one-third-width">
                 <img src="images/food/Project Cover1.jpg" alt="">
                 <h2>Recipie Title</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet quaerat atque sunt error dolores
-                    nam ea soluta sed earum sequi!</p>
+                <p>This is my third recipie. It's is awsome to eat but funny thing is that I don't know the name of this
+                    recipie, even how to made this!</p>
             </div>
         </div>
     </section>
